--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validation": "^3.0.5",
+    "firebase": "^7.17.1",
+    "firebase-admin": "^9.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26"
   }
