--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "express-validation": "^3.0.5",
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
+    "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   }
 }
