--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
+    "http-proxy-middleware": "^1.0.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
@@ -38,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  }, 
+  "proxy": "http://localhost:8080"
 }
