--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^1.0.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
